--- a/11_formas-graficos/116_filter.css
+++ b/11_formas-graficos/116_filter.css
@@ -26,18 +26,10 @@ Nos permiten aplicar efectos de filtro a una imagen.
   width   : 50%;
   display : block;
   margin  : 2rem  auto;
-
-  filter: grayscale(1);
-  filter: sepia(75%);
-  filter: invert(75%);
-  filter: hue-rotate(60deg);
 }
-.filter1 {
-  width   : 50%;
-  display : block;
-  margin  : 2rem  auto;
 
-  filter: grayscale(1);
-  filter: sepia(75%);
-  filter: invert(75%);
-}
+.filter--invert { filter: invert(100%);; }
+.filter--gray   { filter: grayscale(1); }
+.filter--sepia  { filter: sepia(100%); }
+.filter--hue    { filter: hue-rotate(120deg); }
+
