--- a/13_movimientos/132_transform.css
+++ b/13_movimientos/132_transform.css
@@ -6,7 +6,7 @@ transform
 :root {
   --ff     : sans-serif;
   --col1   : #F0F0F0;
-  --col2   : #ffff00;
+  --col2   : #f7df1e;
   --bg1    : #333;
   --sp     : 1rem;
   --br     : 5px;
